# pyattrscore

./: .gitignore  LICENSE  README.md  demo_with_sample_data.py  football_example.py  main.py  pyproject.toml  sample_data.csv  setup.py  test_football_fixes.py  verify_package.py
pyattrscore/: __init__.py  base.py  config.yaml  exceptions.py  exponential_decay.py  first_touch.py  football.py  last_touch.py  linear.py  linear_decay.py  logger.py  u_shaped.py  utils.py  windowed_first_touch.py
tests/: test_first_touch.py  test_football.py  test_linear.py  test_utils.py
